Fix to header being too wide

--- a/index.css
+++ b/index.css
@@ -960,7 +960,7 @@ ul{
   .site-header { 
     transition: background-color 0.5s ease-in-out, filter 0.5s ease-in-out, color 0.5s ease-in-out, text-shadow 0.5s ease-in-out;
     border-bottom: 1px solid #DCE0D9;
-    height: 25vh; 
+    height: 13vh; 
     background-color: #DD0004;
     text-shadow: none; 
     width: 100vw !important; 
